# cis245-testbank

./: .gitignore  ERD.mwb  README.md  ReadMe.txt  TESTBANKDB_gen.sql  pyproject.toml
app/: AddQuestionBottom#TrainingPurpose  createquestion  dataTestbank  exportExam.py  finishExam.py  generateExam.py  login.py  questionnaire.json  registration.py  test_bank.json
db/: README.md  create_tables.sql  reset_schema.ps1  reset_schema.sh  reset_schema.sql
db/data/: question_answers.csv  question_options.csv  questions.csv  questions.xls
db/data_statements/: question_answers_insert.sql  question_options_insert.sql  questions_insert.sql
tests/: __init__.py  test_black_and_pylint.py  test_registration.py  testing_argon.py
